# cuktech-ble-server

./: .dockerignore  README.en.md  README.md  RELEASE_NOTES.md  bemfa_client.py  ble_manager.py  check_env.sh  config.py  config.yaml.example  cuktech_ctl.sh  downsample.py  energy.py  ha_server.py  history.py  pyproject.toml  requirements.txt  state.py  state_protocol_v2.py
.github/workflows/: sync.yml
docker/: Dockerfile  README.md  docker-compose.env.yml  docker-compose.pull.yml  docker-compose.yml  entrypoint.sh
src/cuktech_ble/: __init__.py  ble.py  cli.py  controller.py  protocol.py
systemd/: cuktech-ble-server.logrotate  cuktech-ble-server.service  install-service.sh
tests/: conftest.py  test_bemfa_client.py  test_ble_manager.py  test_config.py  test_controller.py  test_downsample.py  test_energy.py  test_ha_server.py  test_ha_server_sessions.py  test_history.py  test_history_sessions.py  test_integration.py  test_protocol.py  test_protocol_detection.py  test_state.py
web/: index.html  phone.html
web/static/: app.js  charge_history.js  chart-config.js  chart-loader.js  countdown.html  device_info.html  index.css  phone.css  phone.js  port_monitor.html  power_chart.html
