[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuktech-ble-server"
version = "1.0.7"
description = "CUKTECH 10 GaN Charger BLE Server for Home Assistant"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "paho-mqtt>=2.0",
    "bleak>=0.21",
    "cryptography>=41",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning:aiohttp"]
